--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:background="#FFFEFE"
-    android:backgroundTint="#FFFFFF"
 
+    android:backgroundTint="#FFFFFF"
     tools:context="com.example.myapplication.MainActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_weight="1" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -23,6 +29,8 @@
         android:layout_height="97dp"
         android:layout_weight="1"
         android:background="#8BC34A"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
         app:title="                Connected to your Robot"
         app:titleMargin="4dp"
@@ -33,103 +41,100 @@
         android:id="@+id/toolbar1"
         android:layout_width="match_parent"
         android:layout_height="97dp"
-        android:layout_alignBottom="@+id/toolbar"
-        android:layout_marginBottom="-98dp"
         android:layout_weight="1"
         android:background="#00BCD4"
         app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
         app:title="                 Suction cups manipulation"
         app:titleMargin="4dp"
-        app:titleTextColor="#050505" />
+        app:titleTextColor="#050505"
+        tools:layout_editor_absoluteX="52dp"
+        tools:layout_editor_absoluteY="97dp" />
 
     <ImageButton
         android:id="@+id/suctionCup3"
         android:layout_width="111dp"
         android:layout_height="105dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="239dp"
         android:layout_marginEnd="60dp"
         android:layout_marginBottom="235dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
-        android:backgroundTint="#FF9800" />
+        android:backgroundTint="#FF9800"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/suctionCup1"
         android:layout_width="111dp"
         android:layout_height="105dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="149dp"
         android:layout_marginEnd="148dp"
         android:layout_marginBottom="422dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
-        android:backgroundTint="#FF9800" />
+        android:backgroundTint="#FF9800"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/suctionCup2"
         android:layout_width="111dp"
         android:layout_height="105dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="62dp"
         android:layout_marginEnd="237dp"
         android:layout_marginBottom="235dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
-        android:backgroundTint="#FF9800" />
+        android:backgroundTint="#FF9800"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/innerSuctionCups"
         android:layout_width="111dp"
         android:layout_height="105dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="149dp"
         android:layout_marginEnd="148dp"
         android:layout_marginBottom="312dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
-        android:backgroundTint="#673AB7" />
+        android:backgroundTint="#673AB7"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/perimeterCups"
         android:layout_width="192dp"
         android:layout_height="94dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="116dp"
         android:layout_marginEnd="105dp"
         android:layout_marginBottom="20dp"
         android:layout_weight="1"
         android:background="#FF3F51B5"
-        android:text="Perimeter cups on/middle cups off" />
+        android:text="Perimeter cups on/middle cups off"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/allSuctionCups"
         android:layout_width="192dp"
         android:layout_height="94dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="114dp"
         android:layout_marginEnd="106dp"
         android:layout_marginBottom="129dp"
         android:layout_weight="1"
-        android:text="All suction cups on/off" />
+        android:backgroundTint="#3F51B5"
+        android:text="All suction cups on/off"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
